# lightdiff

./: .gitignore  README.md  pyproject.toml
lightdiff/data/: dataset.py
lightdiff/diffusion/: samplers.py  scheduler.py
lightdiff/unet/: blocks.py  model.py
lightdiff/vae/: blocks.py  loss.py  model.py
scripts/: calculate_scaling_factor.py  generate_image.py  preprocess_imgs_to_mu_logvar.py  trainunet.py  trainvae.py
